Combined original version with new build. Added first wrappers